<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/log_in"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/logo_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/overlay"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="Log In Overlay"
            android:src="@drawable/overlay" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="131dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="Robocop logo"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/rounded"
                android:layout_width="fill_parent"
                android:layout_height="37dp"
                android:contentDescription="Top rounded part of content holder"
                android:gravity="bottom"
                android:src="@drawable/radius_large" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingBottom="30sp">

        <TextView
            android:id="@+id/title_Connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_extrabold"
            android:text="@string/Push_Messages"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/title"
            android:textSize="@dimen/h1" />

        <LinearLayout
            android:id="@+id/messageholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/displaylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/sen_regular"
                android:text="@string/Accept_push_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/body"
                android:textSize="@dimen/body_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/holder_accept"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="top"
                app:cardBackgroundColor="@color/button_primary__background"
                app:cardCornerRadius="10dp"
                app:contentPadding="13dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button_accept"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/button_primary__background"
                        android:fontFamily="@font/sen_bold"
                        android:text="@string/Accept_Button"
                        android:textColor="@color/button_primary__text"
                        android:textSize="@dimen/button_font_size">

                    </Button>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/holder_decline"
                android:layout_width="137dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                app:cardBackgroundColor="@color/button_transparent_primary__background"
                app:cardCornerRadius="6dp"
                app:contentPadding="13dp"
                app:contentPaddingLeft="30dp"
                app:contentPaddingRight="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top">


                    <Button
                        android:id="@+id/button_decline"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/button_transparent_primary__background"
                        android:fontFamily="@font/sen_bold"
                        android:text="@string/Decline_Button"
                        android:textColor="@color/button_transparent_primary__text"
                        android:textSize="@dimen/button_font_size">

                    </Button>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>